fixed spacing issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -60,7 +60,7 @@ html {
   font-display: swap;
 }
 
-body { cursor: none; }
+/* body { cursor: none; } */
 ::selection {
   background-color: var(--accent);
   color: var(--background);
